@@ -103,7 +103,7 @@ public class Udf extends GenericUDF {
       else if (argumentsOI[i] instanceof IntObjectInspector) {
         Integer value = (Integer)((IntObjectInspector)argumentsOI[i]).getPrimitiveJavaObject(arguments[i].get());
         if (value != null) {
-          exec.setVariable(name, new Var(new Long(value)));
+          exec.setVariable(name, new Var(Long.valueOf(value)));
         }        
       }
       else if (argumentsOI[i] instanceof LongObjectInspector) {
